# ComfyUI-EXR-API

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  publish_action.yml
js/: index.js  load_exr.js  load_exr_layer_by_name.js  saver.js
modules/: colorspace.py  image_loader.py  load_exr.py  load_exr_layer_by_name.py  load_exr_sequence.py  saver.py  znormalize.py
utils/: batch_utils.py  debug_utils.py  exr_utils.py  preview_utils.py  sequence_utils.py
