[project]
name = "ComfyUI-CoCoTools_IO"
description = "Advanced image input and output: EXR, 32 bit support and more"
version = "0.2.2"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/Conor-Collins/ComfyUI-CoCoTools_IO"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "coco"
DisplayName = "ComfyUI-CoCoTools_IO"
Icon = ""
